# BatVI

./: .cluster.pl.new.swp  .dockerignore  .t.pl.swp  .t.swo  HBVall.fa.amb  HBVall.fa.ann  HBVall.fa.pac  PROJECT_PROGRESS.md  README.md  README.txt  batviconfig.template.txt  build.sh  call_integrations.sh  cat_sorted_sam.sh  clean_run.sh  collate.sh  collate_from_file.sh  combine_hits.pl  commandline.sh  convert_to_fastq.sh  email.sh  extract_hbv_from_fasta.sh  extract_sam_xargs.sh  extract_unmapped_and_oneside.sh  extracthbv.sh  gen_paths.sh  get_blast_hits.sh  get_reads.pl  hbvblast.sh  join_sam.sh  manualcompile.sh  picard_samtofastq.sh  preflight_check.sh  relabelunbugreads.sh  revINDEX.fa.bwt  revINDEX.fa.fmv  revINDEX.fa.sa  search_text.sh  sort_by_name.sh  unbug.pl  (+3 more)
BatMis-3.00/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in
BatMis-3.00/src/: BWTConstruct.c  HSP.c  Makefile  Makefile.am  Makefile.in  MemManager.c  MiscUtilities.h  TextConverter.c  batdecode  batdecode.cpp  batman  batman.cpp  batman.ini  filter  manualcompile.sh  reverse
BatMis-3.00/src/.deps/: BWT.Po  BWTConstruct.Po  HSP.Po  MemManager.Po  TextConverter.Po  batdecode.Po  batman.Po  bwtformatdb.Po  crc32.Po  deflate.Po  dictionary.Po  filter.Po  gzio.Po  infback.Po  inffast.Po  inflate.Po  inftrees.Po  iniparser.Po  r250.Po  reverse.Po  trees.Po  zutil.Po
batindel/: Makefile  Makefile.in  config.h  config.status  configure
docker/: Dockerfile  README.md  entrypoint.sh
msapipeline/: .analysecontigx.sh.swp  .call_bpx.sh.swp  .merge_msa.pl.swp  analysecontig.sh  analysecontigx.sh  blast_parser.pl  call_bpx.sh  cluster.pl  cluster2bed.pl  collate_results.pl  filter_rc.pl  get_probablyhbv.pl  get_reads_in_clusters.pl  get_reads_in_clustersx.pl  make_rank1_bed.pl  make_rank1_bed.sh  merge_msa.pl  (+8 more)
(+112 files in other folders)
